[package]
name = "entangled"
version = "1.2.0"
edition = "2018"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
description = "A simple fork-join task executor."
homepage = "https://github.com/hasenbanck/entangled"
repository = "https://github.com/hasenbanck/entangled"
license = "Zlib OR MIT OR Apache-2.0"
keywords = ["async", "task", "scoped"]

[dependencies]
futures-lite = "1.11"
async-executor = "1.4"
async-channel = "1.6"

[dev-dependencies]
async-std = "1.9"
criterion = "0.3"
num_cpus = "1.13"
switchyard = "0.2"

[profile.bench]
codegen-units = 1
lto = true

[[bench]]
name = "scheduling"
harness = false
